Don't do DefWindowProc on WM_NCACTIVATE if there's no frame.

WM_NCACTIVATE might draw the border around the edge of the window
which causes artifacts, but if there's no system frame then it shouldn't
need to.

BUG=725421

Review-Url: https://codereview.chromium.org/2899053007
Cr-Commit-Position: refs/heads/master@{#474837}

Former-commit-id: a283fb63e50aacdb88401e8d1f4b05f15256b705